--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@angular/compiler-cli": "^19.2.0",
     "@types/jasmine": "~5.1.0",
     "@types/jest": "^30.0.0",
+    "angular-cli-ghpages": "^2.0.3",
     "jasmine-core": "~5.6.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
